--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   syncfusion_flutter_charts: ^28.1.35
   url_launcher: ^6.3.1
   fl_chart: ^0.70.2
+  marquee: ^2.3.0
 
 
 
@@ -82,6 +83,10 @@ flutter:
     - assets/nifty_stock_filtered1.json
     - assets/nifty_stock_sheet_sort1.json
     - assets/nft.json
+    - assets/predictions.json
+    - assets/stock_analysis.json
+    - assets/predicted_stock_prices.json
+    - assets/logo.jpg
 
   #   
 
